# remote-guardian

./: Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts
src/: App.tsx  index.css  tailwind.config.ts
src/ai_backend_research/: README.md  pyproject.toml
src/ai_backend_research/src/ai_backend_research/: crew.py  main.py
src/components/: Layout.tsx  Sidebar.tsx  SitesMap.tsx
src/components/equipment/: EditEquipmentForm.tsx  EquipmentFilters.tsx  EquipmentIcon.tsx  EquipmentTable.tsx  StatusBadge.tsx
src/pages/: Account.tsx  Alerts.tsx  Equipment.tsx  EquipmentDetail.tsx  Index.tsx  Landing.tsx  NotFound.tsx  Settings.tsx  SiteEquipment.tsx  Sites.tsx
