[project]
name = "ai_backend_research"
version = "0.1.0"
description = "ai-backend-research using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
ai_backend_research = "ai_backend_research.main:run"
run_crew = "ai_backend_research.main:run"
train = "ai_backend_research.main:train"
replay = "ai_backend_research.main:replay"
test = "ai_backend_research.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
